Text align fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,6 @@ padding: 10px 0;
 .text {
   color: lightslategray;
   padding: var(--main-pad);
-  white-space: pre-wrap;
 }
 
 .foot {
